Configuration for agroCD

--- a/infra/weather_app_manifests/deployment.yaml
+++ b/infra/weather_app_manifests/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: weather-app
-        image: REPLACEME.azurecr.io/weather-app:latest
+        image: bpaldevacr.azurecr.io/weather-app:1b5a7d96-2026-01-18
         ports:
         - containerPort: 3000
         resources:
