included secrets file in deployment

--- a/.github/argocd/weather-app.yml
+++ b/.github/argocd/weather-app.yml
@@ -20,7 +20,7 @@ spec:
     # Directory - deploy wszystkich YAML w katalogu
     directory:
       recurse: false
-      include: '{namespace,deployment,service,ingress}.yaml'
+      include: '{secret,namespace,deployment,service,ingress}.yaml'
   
   # Destination - gdzie wdrożyć
   destination:
